--- a/index.html
+++ b/index.html
@@ -8,15 +8,48 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
   <!-- Include Lucide Icons from CDN -->
   <script src="https://cdn.jsdelivr.net/npm/lucide-react@0.263.1/dist/lucide-react.min.js"></script>
+  <style>
+    /* Custom Scrollbar Styles */
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1;
+      border-radius: 4px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #2563eb; /* Matching the blue from the gradient */
+      border-radius: 4px;
+      transition: background 0.2s;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #1d4ed8; /* Slightly darker on hover */
+    }
+
+    /* For Firefox */
+    * {
+      scrollbar-width: thin;
+      scrollbar-color: #2563eb #f1f1f1;
+    }
+
+    /* Smooth Scrolling */
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 <body>
   <div class="bg-white w-full">
     <!-- Hero Section -->
     <div class="relative bg-gradient-to-r from-blue-600 to-blue-800 text-white">
-      <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-12 md:py-24">
+      <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 pt-8 md:pt-12 pb-12 md:pb-24">
         <div class="text-center max-w-3xl mx-auto">
-          <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4 sm:mb-6">Welcome to School Ping Pong Club</h1>
-          <p class="text-lg sm:text-xl md:text-2xl mb-6 sm:mb-8 text-blue-100">Join our community of passionate players and discover the exciting world of table tennis</p>
+          <img src="/images/hamilton-southeastern-logo.svg" alt="Hamilton Southeastern Logo" class="w-72 h-72 mx-auto mb-8" style="width: 300px; height: 300px;">
+          <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4 sm:mb-6">Welcome to HSE Ping Pong</h1>
+          <p class="text-lg sm:text-xl md:text-2xl mb-6 sm:mb-8 text-blue-100">Join our community of passionate players and discover the exciting world of Ping Pong</p>
           <div class="flex flex-col sm:flex-row justify-center gap-4 px-4">
             <a href="/join" class="w-full sm:w-auto text-center bg-white text-blue-600 px-6 sm:px-8 py-3 rounded-full font-semibold hover:bg-blue-50 transition-colors">Join Now</a>
             <a href="/schedule" class="w-full sm:w-auto text-center border-2 border-white text-white px-6 sm:px-8 py-3 rounded-full font-semibold hover:bg-white/10 transition-colors">View Schedule</a>
@@ -28,19 +61,19 @@
     <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-4 sm:py-6">
       <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-8 text-center">
         <div class="p-2">
-          <p class="text-2xl sm:text-3xl font-bold">50+</p>
+          <p class="text-2xl sm:text-3xl font-bold">20+</p>
           <p class="text-xs sm:text-sm">Active Members</p>
         </div>
         <div class="p-2">
-          <p class="text-2xl sm:text-3xl font-bold">10</p>
-          <p class="text-xs sm:text-sm">Weekly Events</p>
+          <p class="text-2xl sm:text-3xl font-bold">4+</p>
+          <p class="text-xs sm:text-sm">Monthly Events</p>
         </div>
         <div class="p-2">
-          <p class="text-2xl sm:text-3xl font-bold">15+</p>
+          <p class="text-2xl sm:text-3xl font-bold">10+</p>
           <p class="text-xs sm:text-sm">Tournaments</p>
         </div>
         <div class="p-2">
-          <p class="text-2xl sm:text-3xl font-bold">4</p>
+          <p class="text-2xl sm:text-3xl font-bold">5</p>
           <p class="text-xs sm:text-sm">Professional Tables</p>
         </div>
       </div>
@@ -51,42 +84,23 @@
 <!-- Features Section -->
 <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-12 sm:py-24">
   <div class="text-center mb-12 sm:mb-16">
-    <span class="inline-block bg-blue-600 text-white px-3 py-1 rounded-full text-xs font-medium mb-4">Why Choose Us</span>
+    <span class="inline-block bg-blue-600 text-white px-3 py-1 rounded-full text-xs font-medium mb-4">Why Join Us?</span>
     <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-900 mb-4">Experience the Best in Table Tennis</h2>
-    <p class="text-lg sm:text-xl text-gray-600 max-w-2xl mx-auto">We offer comprehensive training and exciting competitive opportunities</p>
+    <p class="text-lg sm:text-xl text-gray-600 max-w-2xl mx-auto">We offer intense tournaments and engaging competitive opportunities</p>
   </div>
 
   <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6 sm:gap-8">
     <div class="p-6 bg-white shadow-lg rounded-lg hover:shadow-xl transition-shadow">
       <div class="flex flex-col items-center space-y-4">
         <svg class="h-10 w-10 sm:h-12 sm:w-12 text-blue-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M22 8.92v5.96a1 1 0 0 1-1.45.9L16 13l-5 3V8l5-3 4.55 2.82A1 1 0 0 1 22 8.92z"></path>
-          <path d="M2 16v-4"></path>
+          <circle cx="12" cy="8" r="3"></circle>
+          <path d="M12 11v7"></path>
+          <path d="M8 20h8"></path>
+          <path d="M15 8h4"></path>
+          <path d="M5 8h4"></path>
         </svg>
         <h3 class="text-lg sm:text-xl font-semibold">Competitions</h3>
-        <p class="text-gray-600 text-sm sm:text-base">Regular tournaments and leagues for all skill levels</p>
-      </div>
-    </div>
-    <div class="p-6 bg-white shadow-lg rounded-lg hover:shadow-xl transition-shadow">
-      <div class="flex flex-col items-center space-y-4">
-        <svg class="h-10 w-10 sm:h-12 sm:w-12 text-blue-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-          <circle cx="9" cy="7" r="4"></circle>
-        </svg>
-        <h3 class="text-lg sm:text-xl font-semibold">Expert Coaching</h3>
-        <p class="text-gray-600 text-sm sm:text-base">Learn from experienced players and certified coaches</p>
-      </div>
-    </div>
-    <div class="p-6 bg-white shadow-lg rounded-lg hover:shadow-xl transition-shadow">
-      <div class="flex flex-col items-center space-y-4">
-        <svg class="h-10 w-10 sm:h-12 sm:w-12 text-blue-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
-          <line x1="16" y1="2" x2="16" y2="6"></line>
-          <line x1="8" y1="2" x2="8" y2="6"></line>
-          <line x1="3" y1="10" x2="21" y2="10"></line>
-        </svg>
-        <h3 class="text-lg sm:text-xl font-semibold">Regular Practice</h3>
-        <p class="text-gray-600 text-sm sm:text-base">Scheduled practice sessions throughout the week</p>
+        <p class="text-gray-600 text-sm sm:text-base">Regular tournaments and brackets for all skill levels</p>
       </div>
     </div>
     <div class="p-6 bg-white shadow-lg rounded-lg hover:shadow-xl transition-shadow">
@@ -98,8 +112,31 @@
           <path d="M12 14h6"></path>
           <path d="M10 18h10"></path>
         </svg>
-        <h3 class="text-lg sm:text-xl font-semibold">Skill Development</h3>
-        <p class="text-gray-600 text-sm sm:text-base">Structured programs for continuous improvement</p>
+
+        <h3 class="text-lg sm:text-xl font-semibold">Gain Experience</h3>
+        <p class="text-gray-600 text-sm sm:text-base">Learn from experienced players and build upon your skill level</p>
+      </div>
+    </div>
+    <div class="p-6 bg-white shadow-lg rounded-lg hover:shadow-xl transition-shadow">
+      <div class="flex flex-col items-center space-y-4">
+        <svg class="h-10 w-10 sm:h-12 sm:w-12 text-blue-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+          <line x1="16" y1="2" x2="16" y2="6"></line>
+          <line x1="8" y1="2" x2="8" y2="6"></line>
+          <line x1="3" y1="10" x2="21" y2="10"></line>
+        </svg>
+        <h3 class="text-lg sm:text-xl font-semibold">Regular Practice</h3>
+        <p class="text-gray-600 text-sm sm:text-base">Practices will be scheduled for at least once a week</p>
+      </div>
+    </div>
+    <div class="p-6 bg-white shadow-lg rounded-lg hover:shadow-xl transition-shadow">
+      <div class="flex flex-col items-center space-y-4">
+        <svg class="h-10 w-10 sm:h-12 sm:w-12 text-blue-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+          <circle cx="9" cy="7" r="4"></circle>
+        </svg>
+        <h3 class="text-lg sm:text-xl font-semibold">Fun with Friends</h3>
+        <p class="text-gray-600 text-sm sm:text-base">Bring friends with you and have lots of fun!</p>
       </div>
     </div>
   </div>
@@ -114,28 +151,76 @@
       <p class="text-lg sm:text-xl text-gray-600 max-w-2xl mx-auto">Dedicated individuals committed to your table tennis journey</p>
     </div>
 
-    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
       <div class="bg-white shadow-lg rounded-lg overflow-hidden">
         <img src="/api/placeholder/400/300" alt="John Doe" class="w-full h-40 sm:h-48 object-cover">
         <div class="p-4 sm:p-6">
-          <h3 class="text-lg sm:text-xl font-semibold mb-1">John Doe</h3>
-          <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Club President</p>
+          <h3 class="text-lg sm:text-xl font-semibold mb-1">Jensen Kohlmeyer</h3>
+          <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Club Founder</p>
           <p class="text-gray-600 text-sm sm:text-base">Former state champion with 10+ years of coaching experience</p>
         </div>
       </div>
       <div class="bg-white shadow-lg rounded-lg overflow-hidden">
         <img src="/api/placeholder/400/300" alt="Jane Smith" class="w-full h-40 sm:h-48 object-cover">
         <div class="p-4 sm:p-6">
-          <h3 class="text-lg sm:text-xl font-semibold mb-1">Jane Smith</h3>
-          <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Vice President</p>
+          <h3 class="text-lg sm:text-xl font-semibold mb-1">Ben Odom</h3>
+          <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
           <p class="text-gray-600 text-sm sm:text-base">Certified instructor specializing in youth development</p>
         </div>
       </div>
       <div class="bg-white shadow-lg rounded-lg overflow-hidden">
         <img src="/api/placeholder/400/300" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
         <div class="p-4 sm:p-6">
-          <h3 class="text-lg sm:text-xl font-semibold mb-1">Michael Johnson</h3>
-          <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Head Coach</p>
+          <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
+          <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
+          <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques</p>
+        </div>
+      </div>
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+        <img src="/api/placeholder/400/300" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
+        <div class="p-4 sm:p-6">
+          <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
+          <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
+          <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques</p>
+        </div>
+      </div>
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+        <img src="/api/placeholder/400/300" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
+        <div class="p-4 sm:p-6">
+          <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
+          <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
+          <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques</p>
+        </div>
+      </div>
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+        <img src="/api/placeholder/400/300" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
+        <div class="p-4 sm:p-6">
+          <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
+          <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
+          <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques</p>
+        </div>
+      </div>
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+        <img src="/api/placeholder/400/300" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
+        <div class="p-4 sm:p-6">
+          <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
+          <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
+          <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques</p>
+        </div>
+      </div>
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+        <img src="/api/placeholder/400/300" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
+        <div class="p-4 sm:p-6">
+          <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
+          <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
+          <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques</p>
+        </div>
+      </div>
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+        <img src="/api/placeholder/400/300" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
+        <div class="p-4 sm:p-6">
+          <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
+          <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
           <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques</p>
         </div>
       </div>
@@ -148,10 +233,10 @@
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
     <div class="max-w-3xl mx-auto">
       <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-4 sm:mb-6">Ready to Join Our Community?</h2>
-      <p class="text-lg sm:text-xl mb-6 sm:mb-8 text-blue-100">Start your table tennis journey today and become part of our growing community</p>
+      <p class="text-lg sm:text-xl mb-6 sm:mb-8 text-blue-100">Start your Ping Pong journey today and become part of our growing community</p>
       <div class="flex flex-col sm:flex-row justify-center gap-4 px-4">
         <a href="/join" class="w-full sm:w-auto text-center bg-white text-blue-600 px-6 sm:px-8 py-3 rounded-full font-semibold hover:bg-blue-50 transition-colors">Join Now</a>
-        <a href="/contact" class="w-full sm:w-auto text-center border-2 border-white text-white px-6 sm:px-8 py-3 rounded-full font-semibold hover:bg-white/10 transition-colors">Contact Us</a>
+        <a href="/schedule" class="w-full sm:w-auto text-center border-2 border-white text-white px-6 sm:px-8 py-3 rounded-full font-semibold hover:bg-white/10 transition-colors">View Schedule</a>
       </div>
     </div>
   </div>
