--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
   <div class="bg-white w-full">
     <!-- Hero Section -->
     <div class="relative bg-gradient-to-r from-blue-600 to-blue-800 text-white">
-      <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 pt-8 md:pt-12 pb-12 md:pb-24">
+      <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 pt-4 md:pt-8 pb-12 md:pb-24">
         <div class="text-center max-w-3xl mx-auto">
-          <img src="/images/hamilton-southeastern-logo.svg" alt="Hamilton Southeastern Logo" class="w-72 h-72 mx-auto mb-8" style="width: 300px; height: 300px;">
+          <img src="images/hamilton-southeastern-logo.svg" alt="Hamilton Southeastern Logo" class="w-72 h-72 mx-auto mb-8" style="width: 300px; height: 300px;">
           <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4 sm:mb-6">Welcome to HSE Ping Pong</h1>
           <p class="text-lg sm:text-xl md:text-2xl mb-6 sm:mb-8 text-blue-100">Join our community of passionate players and discover the exciting world of Ping Pong</p>
           <div class="flex flex-col sm:flex-row justify-center gap-4 px-4">
@@ -298,6 +298,21 @@
     </div>
   </div>
 </div>
+
+<!-- Social Section: Instagram Feed -->
+<div class="bg-gray-50 py-12 sm:py-24" id="instagram-section">
+  <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="text-center mb-12 sm:mb-16">
+      <span class="inline-block bg-blue-600 text-white px-3 py-1 rounded-full text-xs font-medium mb-4">Follow Us on Instagram</span>
+      <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-900 mb-4">Our Latest Posts</h2>
+      <p class="text-lg sm:text-xl text-gray-600 max-w-2xl mx-auto">Catch up with our latest updates and moments.</p>
+    </div>
+
+    <div id="instagram-feed" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+      <!-- Instagram posts will be loaded here -->
+    </div>
+  </div>
+</div>e
 
 <!-- CTA Section -->
 <div class="bg-blue-600 text-white py-12 sm:py-24">
