add dates and other things

--- a/calendar.html
+++ b/calendar.html
@@ -236,9 +236,19 @@
   <script>
     // Define meeting dates and details
     const meetings = [
-      { date: new Date(2024, 10, 18), details: "General Club Meeting at 3 PM" },
-      { date: new Date(2024, 10, 21), details: "Ping Pong Practice Session at 5 PM" },
-      { date: new Date(2024, 10, 28), details: "Monthly Tournament at 6 PM" },
+      { date: new Date(2024, 10, 15), details: "Ping Pong during Pathways A and B in Frau Reigle's Room: ENL Department" },
+      { date: new Date(2024, 11, 6), details: "Ping Pong during Pathways A and B in Frau Reigle's Room: ENL Department"},
+      { date: new Date(2024, 11, 16), details: "Ping Pong during Pathways A and B in Frau Reigle's Room: ENL Department" },
+      { date: new Date(2025, 0, 10), details: "Ping Pong during Pathways A and B in Frau Reigle's Room: ENL Department" },
+      { date: new Date(2025, 0, 31), details: "Ping Pong during Pathways A and B in Frau Reigle's Room: ENL Department" },
+      { date: new Date(2025, 1, 14), details: "Ping Pong during Pathways A and B in Frau Reigle's Room: ENL Department" },
+      { date: new Date(2025, 1, 28), details: "Ping Pong during Pathways A and B in Frau Reigle's Room: ENL Department" },
+      { date: new Date(2025, 2, 7), details: "Ping Pong during Pathways A and B in Frau Reigle's Room: ENL Department" },
+      { date: new Date(2025, 2, 14), details: "Ping Pong during Pathways A and B in Frau Reigle's Room: ENL Department" },
+      { date: new Date(2025, 2, 28), details: "Ping Pong during Pathways A and B in Frau Reigle's Room: ENL Department" },
+      { date: new Date(2025, 4, 2), details: "Ping Pong during Pathways A and B in Frau Reigle's Room: ENL Department" },
+      { date: new Date(2025, 4, 16), details: "Ping Pong during Pathways A and B in Frau Reigle's Room: ENL Department" },
+
     ];
 
     const calendarDays = document.getElementById('calendar-days');
