--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       <div class="text-center mb-12 sm:mb-16">
         <span class="inline-block bg-blue-600 text-white px-3 py-1 rounded-full text-xs font-medium mb-4">Our
           Leadership</span>
-        <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-900 mb-4">Meet Our Team</h2>
+        <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-900 mb-4">Meet Our Members</h2>
         <p class="text-lg sm:text-xl text-gray-600 max-w-2xl mx-auto">Dedicated individuals committed to your table
           tennis journey</p>
       </div>
@@ -387,5 +387,4 @@
   </div>
   </div>
 </body>
-
 </html>
