--- a/index.html
+++ b/index.html
@@ -375,12 +375,11 @@
         <p class="text-lg sm:text-xl mb-6 sm:mb-8 text-blue-100">Start your Ping Pong journey today and become part of
           our growing community</p>
         <div class="flex flex-col sm:flex-row justify-center gap-4 px-4">
-          <a href="/join"
-            class="primary-button w-full sm:w-auto text-center bg-white text-blue-600 px-6 sm:px-8 py-3 rounded-full font-semibold hover:bg-blue-50 transition-colors">Join
-            Now</a>
-          <a href="/schedule"
+          <a href="https://hsepingpong.com"
+            class="primary-button w-full sm:w-auto text-center bg-white text-blue-600 px-6 sm:px-8 py-3 rounded-full font-semibold hover:bg-blue-50 transition-colors">Leaderboard</a>
+          <a href="/calendar.html"
             class="secondary-button sm:w-auto text-center border-2 border-white text-white px-6 sm:px-8 py-3 rounded-full font-semibold hover:bg-white/10 transition-colors">View
-            Schedule</a>
+            Calendar</a>
         </div>
       </div>
     </div>
