--- a/calendar.html
+++ b/calendar.html
@@ -9,6 +9,10 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
   <style>
     /* Date Styles */
+
+    body{
+      overflow-x: hidden;
+    }
     .day {
       position: relative;
       padding: 12px;
