--- a/index.html
+++ b/index.html
@@ -137,6 +137,36 @@
     .feature-card svg {
       transition: all 0.3s ease;
     }
+
+    .team-section {
+      filter: grayscale(100%);
+      transition: filter 0.3s ease;
+    }
+
+    .team-section:hover{
+      filter: grayscale(0%);
+    }
+
+    .team-cards{
+      transition: 0.3s ease;
+    }
+    
+    .team-cards:hover{
+      scale:1.01;
+      box-shadow: 3px 4px 14px 0px rgba(0,0,0,0.2);
+    }
+
+    @media(max-width: 768px){
+      .team-cards img{
+        transition: none !important;
+      }
+      .team-cards img:hover{
+        filter: grayscale(100%) !important;
+        scale: 1.00 !important;
+        /* box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1) !important; */
+      }
+      
+    }
   </style>
 </head>
 
@@ -267,83 +297,56 @@
       </div>
 
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-          <img src="/images/placeholderimage.png" alt="John Doe" class="w-full h-40 sm:h-48 object-cover">
+        <div class="bg-white shadow-lg rounded-lg overflow-hidden team-cards">
+          <img src="/images/jensen3.PNG" alt="John Doe" class="w-full h-40 sm:h-48 object-fill team-section">
           <div class="p-4 sm:p-6">
             <h3 class="text-lg sm:text-xl font-semibold mb-1">Jensen Kohlmeyer</h3>
-            <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Club Founder</p>
-            <p class="text-gray-600 text-sm sm:text-base">Former state champion with 10+ years of coaching experience
+            <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">President and Club Founder</p>
+            <p class="text-gray-600 text-sm sm:text-base">Known for reciting poetry mid-rally
             </p>
           </div>
         </div>
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-          <img src="/images/placeholderimage.png" alt="Jane Smith" class="w-full h-40 sm:h-48 object-cover">
+        <div class="bg-white shadow-lg rounded-lg overflow-hidden team-cards">
+          <img src="/images/nick1.JPG" alt="Jane Smith" class="w-full h-40 sm:h-48 object-fill team-section">
+          <div class="p-4 sm:p-6">
+            <h3 class="text-lg sm:text-xl font-semibold mb-1">Nick Woodward</h3>
+            <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Vice President and Co-Founder</p>
+            <p class="text-gray-600 text-sm sm:text-base">Legend has it, they trained by playing against the breeze</p>
+          </div>
+        </div>
+        <div class="bg-white shadow-lg rounded-lg overflow-hidden team-cards">
+          <img src="/images/ben1.PNG" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-fill team-section">
           <div class="p-4 sm:p-6">
             <h3 class="text-lg sm:text-xl font-semibold mb-1">Ben Odom</h3>
-            <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
-            <p class="text-gray-600 text-sm sm:text-base">Certified instructor specializing in youth development</p>
-          </div>
-        </div>
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-          <img src="/images/placeholderimage.png" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
-          <div class="p-4 sm:p-6">
-            <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
-            <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
-            <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques
+            <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder & Social Media Manager</p>
+            <p class="text-gray-600 text-sm sm:text-base">Fully manages our Social Media Campaign and audience outreach
             </p>
           </div>
         </div>
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-          <img src="/images/placeholderimage.png" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
+        <div class="bg-white shadow-lg rounded-lg overflow-hidden team-cards">
+          <img src="/images/will1.JPG" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-fill team-section">
           <div class="p-4 sm:p-6">
-            <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
+            <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe</h3>
             <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
-            <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques
+            <p class="text-gray-600 text-sm sm:text-base">Towering over the table, this absolute unit of a player moves with the speed of a glacier
             </p>
           </div>
         </div>
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-          <img src="/images/placeholderimage.png" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
+        <div class="bg-white shadow-lg rounded-lg overflow-hidden team-cards">
+          <img src="/images/grant1.PNG" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-fill team-section">
           <div class="p-4 sm:p-6">
-            <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
-            <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
-            <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques
+            <h3 class="text-lg sm:text-xl font-semibold mb-1">Grant Huffman</h3>
+            <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Treasury</p>
+            <p class="text-gray-600 text-sm sm:text-base">Said to have been born with a paddle in one hand and a fiery passion in the other
             </p>
           </div>
         </div>
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-          <img src="/images/placeholderimage.png" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
+        <div class="bg-white shadow-lg rounded-lg overflow-hidden team-cards">
+          <img src="/images/caleb1.PNG" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-fill team-section">
           <div class="p-4 sm:p-6">
-            <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
-            <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
-            <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques
-            </p>
-          </div>
-        </div>
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-          <img src="/images/placeholderimage.png" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
-          <div class="p-4 sm:p-6">
-            <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
-            <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
-            <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques
-            </p>
-          </div>
-        </div>
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-          <img src="/images/placeholderimage.png" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
-          <div class="p-4 sm:p-6">
-            <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
-            <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
-            <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques
-            </p>
-          </div>
-        </div>
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-          <img src="/images/placeholderimage.png" alt="Michael Johnson" class="w-full h-40 sm:h-48 object-cover">
-          <div class="p-4 sm:p-6">
-            <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe Johnson</h3>
-            <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
-            <p class="text-gray-600 text-sm sm:text-base">International competitor with expertise in advanced techniques
+            <h3 class="text-lg sm:text-xl font-semibold mb-1">Caleb Clark</h3>
+            <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Coach</p>
+            <p class="text-gray-600 text-sm sm:text-base">7th Grader taking High School classes, a ping pong maestro. Taught by Ben Odom. 
             </p>
           </div>
         </div>
@@ -366,6 +369,8 @@
       </div>
     </div>
   </div>
+
+  <!-- FOR THE INSTAGRAM SECTION, ADD A TEXT AT THE BOTTOM SAYING "A special thanks to Ben Odom for taking full control of our Social Media Campaign!" -->
 
   <!-- CTA Section -->
   <div class="bg-blue-600 text-white py-12 sm:py-24">
