working instagram api code

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -58,7 +58,7 @@
       </span>
     </div>
   </div>
-<script src="/scripts/calendar.js" type="module"></script>
+<script src="/js/calendar.js" type="module"></script>
 </body>
 
 </html>
