--- a/public/index.html
+++ b/public/index.html
@@ -204,10 +204,14 @@
           Instagram</span>
         <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-900 mb-4">Our Latest Posts</h2>
         <p class="text-lg sm:text-xl text-gray-600 max-w-2xl mx-auto">Catch up with our latest updates and moments.</p>
+        <p class="text-lg sm:text-xl text-gray-600 max-w-2xl mx-auto mt-4">A special thanks to Ben Odom for taking full control of our Social Media Campaign!</p>
       </div>
-
-      <div id="instagram-feed" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- Instagram posts will be loaded here -->
+  
+      <!-- Horizontal Scroll Container -->
+      <div class="overflow-x-auto">
+        <div id="instagram-feed">
+          <!-- Instagram posts will be loaded here -->
+        </div>
       </div>
     </div>
   </div>
@@ -232,6 +236,6 @@
     </div>
   </div>
   </div>
-  <script type="module" src="/scripts/fetch.js"></script>
+  <script type="module" src="/js/fetch.js"></script>
 </body>
 </html>
