--- a/public/index.html
+++ b/public/index.html
@@ -170,7 +170,8 @@
           <div class="p-4 sm:p-6">
             <h3 class="text-lg sm:text-xl font-semibold mb-1">Will Howe</h3>
             <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Co-Founder</p>
-            <p class="text-gray-600 text-sm sm:text-base">Towering over the table, this absolute unit of a player moves with the speed of a glacier
+            <p class="text-gray-600 text-sm sm:text-base">Towering over the table, this absolute unit of a player moves
+              with the speed of a glacier
             </p>
           </div>
         </div>
@@ -179,7 +180,8 @@
           <div class="p-4 sm:p-6">
             <h3 class="text-lg sm:text-xl font-semibold mb-1">Grant Huffman</h3>
             <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Treasury</p>
-            <p class="text-gray-600 text-sm sm:text-base">Said to have been born with a paddle in one hand and a fiery passion in the other
+            <p class="text-gray-600 text-sm sm:text-base">Said to have been born with a paddle in one hand and a fiery
+              passion in the other
             </p>
           </div>
         </div>
@@ -188,7 +190,8 @@
           <div class="p-4 sm:p-6">
             <h3 class="text-lg sm:text-xl font-semibold mb-1">Caleb Clark</h3>
             <p class="text-blue-600 font-medium mb-2 text-sm sm:text-base">Coach</p>
-            <p class="text-gray-600 text-sm sm:text-base">7th Grader taking High School classes, a ping pong maestro. Taught by Ben Odom. 
+            <p class="text-gray-600 text-sm sm:text-base">7th Grader taking High School classes, a ping pong maestro.
+              Taught by Ben Odom.
             </p>
           </div>
         </div>
@@ -199,24 +202,26 @@
   <!-- Social Section: Instagram Feed -->
   <div class="bg-gray-50 py-12 sm:py-24" id="instagram-section">
     <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="text-center mb-12 sm:mb-16">
+      <div class="text-center mb-4 sm:mb-12 latest-box">
         <span class="inline-block bg-blue-600 text-white px-3 py-1 rounded-full text-xs font-medium mb-4">Follow Us on
           Instagram</span>
         <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-900 mb-4">Our Latest Posts</h2>
         <p class="text-lg sm:text-xl text-gray-600 max-w-2xl mx-auto">Catch up with our latest updates and moments.</p>
-        <p class="text-lg sm:text-xl text-gray-600 max-w-2xl mx-auto mt-4">A special thanks to Ben Odom for taking full control of our Social Media Campaign!</p>
       </div>
-  
+
       <!-- Horizontal Scroll Container -->
       <div class="overflow-x-auto">
         <div id="instagram-feed">
           <!-- Instagram posts will be loaded here -->
         </div>
       </div>
+      <div class="text-center mt-8">
+        <p class="text-lg sm:text-xl text-gray-600">
+          A special thanks to <span class="text-blue-700 font-medium blue-text-shadow">Ben Odom</span> for taking <span>full</span> control of our Social Media Campaign!
+        </p>        
+      </div>
     </div>
   </div>
-
-  <!-- FOR THE INSTAGRAM SECTION, ADD A TEXT AT THE BOTTOM SAYING "A special thanks to Ben Odom for taking full control of our Social Media Campaign!" -->
 
   <!-- CTA Section -->
   <div class="bg-blue-600 text-white py-12 sm:py-24">
