make ben odom button clickable and redirectable

--- a/public/index.html
+++ b/public/index.html
@@ -217,7 +217,7 @@
       </div>
       <div class="text-center mt-8">
         <p class="text-lg sm:text-xl text-gray-600">
-          A special thanks to <span class="text-blue-700 font-medium blue-text-shadow">Ben Odom</span> for taking <span>full</span> control of our Social Media Campaign!
+          A special thanks to <a href="https://www.instagram.com/benodumb/" target="_blank"><span class="text-blue-700 font-medium blue-text-shadow">Ben Odom</span></a> for taking <span>full</span> control of our Social Media Campaign!
         </p>        
       </div>
     </div>
